# VegaMessengerServer

./: CMakeLists.txt  Serialization.h  Serializer.cpp  create_ssl_keys.sh  main.cpp
modules/: FindMsgPack.cmake
